using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace FinBY.API.Data.DTO;

public class UserDTO
{
    public int Id { get; set; }
    public string Name { get; set; }
}
